--- a/appspec.yml
+++ b/appspec.yml
@@ -20,6 +20,7 @@ files:
   - source: bin
     destination: /app/bin
 hooks:
-  AfterInstall:
+  ApplicationStart:
     - location: bin/deploy.sh
-      runas: ec2-user
+      timeout: 300
+      runas: root
