The good old college try to get this thing working

--- a/appspec.yml
+++ b/appspec.yml
@@ -20,7 +20,6 @@ files:
   - source: bin
     destination: /app/bin
 hooks:
-  ApplicationStart:
+  AfterInstall:
     - location: bin/deploy.sh
       timeout: 300
-      runas: root
