--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "eslint-config-next": "13.5.1",
-    "next": "^13.5.6",
+    "next": "^14.0.4",
     "postcss": "^8.4.33",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
@@ -32,6 +31,7 @@
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2"
