--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
     commands:
       - cd web
       - echo Installing packages
-      - npm ci
+      - npm install
   pre_build:
     commands:
       - echo No pre-build steps to run
