--- a/terraform/.gitignore
+++ b/terraform/.gitignore
@@ -2,9 +2,9 @@
 **/.terraform/*
 
 # .tfstate files
-
 *.tfstate
 *.tfstate.*
+
 # Crash log files
 
 crash.log
@@ -23,6 +23,7 @@ override.tf
 override.tf.json
 *_override.tf
 *_override.tf.json
+**/.zip/*
 
 # Include override files you do wish to add to version control using negated pattern
 # !example_override.tf
